--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,17 @@ spring.security.oauth2.client.registration.google.scope=profile, email
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+
+spring.security.oauth2.client.registration.kakao.client-id=29ba16db25cdb9eb61b39a437825310b
+spring.security.oauth2.client.registration.kakao.client-secret=XqUrgtuq1elP6tzDhMpqe17LTCTAdP5n
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email, gender, birthday
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
+
+spring.security.oauth2.client.provider.kakao.authorization-uri =https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri =https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri =https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute =id
